esphome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esphome
  template:
    metadata:
      labels:
        app: esphome
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: esphome-config
      containers:
      - image: ghcr.io/esphome/esphome
        name: builder
        volumeMounts:
        - name: data
          mountPath: /config
        ports:
        - name: http
          protocol: TCP
          containerPort: 6052
        readinessProbe:
          httpGet:
            path: /
            port: http
