esphome/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
spec:
  selector:
    app: esphome
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
    name: http
