esphome/oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: esphome-proxy
  name: esphome-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esphome-proxy
  template:
    metadata:
      labels:
        app: esphome-proxy
    spec:
      containers:
        - image: quay.io/oauth2-proxy/oauth2-proxy
          args:
          - --provider=keycloak-oidc
          - --redirect-url=https://esphome.local.ongy.net/oauth2/callback
          - --oidc-issuer-url=https://keycloak.local.ongy.net/realms/local.ongy.net
          - --code-challenge-method=S256
          - --reverse-proxy=true
          - --http-address=0.0.0.0:8080
          - --upstream=http://esphome
          - --email-domain=*

          - --skip-provider-button=true
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ['ALL']
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 999
            runAsGroup: 1000
            privileged: false
          name: oauth-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: esphome-proxy
spec:
  selector:
    app: esphome-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: radarr-proxy
# spec:
#   podSelector:
#     matchLabels:
#       app: radarr-proxy
#   policyTypes:
#     - Egress
#   egress:
#     - to:
#         - ipBlock:
#             cidr: 192.168.128.2/32
#       ports:
#         - protocol: TCP
#           port: 443
#     - to:
#         - namespaceSelector:
#             matchLabels:
#               kubernetes.io/metadata.name: kube-system
#       ports:
#         - protocol: UDP
#           port: 53
#     - to:
#         - podSelector:
#             matchLabels:
#               app: radarr
#       ports:
#         - protocol: TCP
#           port: 7878
# ---
# apiVersion: "cilium.io/v2"
# kind: CiliumNetworkPolicy
# metadata:
#   name: radarr-proxy
# spec:
#   endpointSelector:
#     matchLabels:
#       app: radarr-proxy
#   ingress:
#     - fromEntities:
#         - ingress
#
